kubernetes/apps/base/media/media-ottawa/sabnzbd/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: media
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:5.1.1
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
